:nail_care: Fix header title jumping in send component in css file

--- a/src/components/send/steps/confirm/confirm.css
+++ b/src/components/send/steps/confirm/confirm.css
@@ -66,7 +66,7 @@
 
   & > footer {
     width: 100%;
-    margin: 23px 0 0;
+    margin-bottom: -42px;
 
     & > div {
       height: 80px;
